# warflower

./: .gitignore  README.md  pyproject.toml
client/: pyproject.toml
client/keanu/: bot.py  client.py
scripts/: quickstart.sh
warflower/: containers.py  controller.py  docker.py  servers.py  util.py
warflower/games/: counterstrike.yaml  enshrouded.yaml  valheim.yaml
warflower/webapp/: main.py
webapp/: main.py
