[tool.poetry]
name = "keanu"
version = "0.1.0"
description = "Discord client for warflower"
authors = ["Scott Clark <scott@scottclark.ai>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
